# alpmhs

./: .gitignore  LICENSE  README.md  alpmhs.cabal
lib/: helper.c
lib/Distribution/ArchLinux/: Libalpm.hs
lib/Distribution/ArchLinux/Libalpm/: Raw.hs  Raw.hsc  Wrapper.hs
lib/Distribution/ArchLinux/Libalpm/Raw/: Database.hsc  List.hsc  Misc.hsc  Options.hsc  Packages.hsc  Transactions.hsc  Types.hsc
lib/Distribution/ArchLinux/Libalpm/Wrapper/: Alpm.hs  Callbacks.hs  List.hs  Options.hs  TH.hs  Types.hs  Util.hs
lib/Distribution/ArchLinux/Libalpm/Wrapper/Callbacks/: Event.hs  Question.hs
lib/Distribution/ArchLinux/Libalpm/Wrapper/Callbacks/Event/: Generated.hs
lib/Distribution/ArchLinux/Libalpm/Wrapper/Callbacks/Question/: Generated.hs
lib/test/: Main.hs
lib/test/Tests/: AlpmList.hs
