Name:                alpmhs
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
Version:             0.1.0.0
Synopsis:            ArchLinux Package Management library wrapper and its frontend.
Homepage:            https://github.com/dpx-infinity/alpmhs
Bug-Reports:         https://github.com/dpx-infinity/alpmhs/issues
License:             BSD3
License-File:        LICENSE
Author:              Vladimir Matveev
Maintainer:          Vladimir Matveev <dpx.infinity@gmail.com>
Category:            Distribution
Build-Type:          Simple
Cabal-Version:       >=1.8
Extra-Source-Files:  README.md


Library
    Build-Depends:     base               >= 4.5
                     , bindings-DSL       -any
                     , mtl                -any
                     , transformers       -any
                     , template-haskell   -any
                     , containers         -any
    Extra-Libraries:   alpm
    Hs-Source-Dirs:    lib
    C-Sources:         lib/helper.c
    Exposed-Modules:   Distribution.ArchLinux.Libalpm
                     , Distribution.ArchLinux.Libalpm.Raw
                     , Distribution.ArchLinux.Libalpm.Raw.Types
                     , Distribution.ArchLinux.Libalpm.Raw.Options
                     , Distribution.ArchLinux.Libalpm.Raw.Database
                     , Distribution.ArchLinux.Libalpm.Raw.Packages
                     , Distribution.ArchLinux.Libalpm.Raw.Transactions
                     , Distribution.ArchLinux.Libalpm.Raw.Misc
                     , Distribution.ArchLinux.Libalpm.Raw.List
                     , Distribution.ArchLinux.Libalpm.Wrapper
                     , Distribution.ArchLinux.Libalpm.Wrapper.List
                     , Distribution.ArchLinux.Libalpm.Wrapper.Alpm
                     , Distribution.ArchLinux.Libalpm.Wrapper.Types
                     , Distribution.ArchLinux.Libalpm.Wrapper.Util
                     , Distribution.ArchLinux.Libalpm.Wrapper.Options
                     , Distribution.ArchLinux.Libalpm.Wrapper.Callbacks
                     , Distribution.ArchLinux.Libalpm.Wrapper.Callbacks.Event
                     , Distribution.ArchLinux.Libalpm.Wrapper.TH
    Extensions:        ForeignFunctionInterface, FlexibleInstances,
                       TypeSynonymInstances, MultiParamTypeClasses,
                       ScopedTypeVariables, FunctionalDependencies,
                       GeneralizedNewtypeDeriving, RecordWildCards,
                       NamedFieldPuns, ViewPatterns, RankNTypes,
                       ExistentialQuantification
    GHC-Options:       -O2

Executable halp
    Build-Depends:     base >= 4.5, alpmhs
    Hs-Source-Dirs:    bin
    Main-Is:           Main.hs

Test-Suite library-tests
    Type:              exitcode-stdio-1.0
    Build-Depends:     base >= 4.5, QuickCheck >= 2.4.2, alpmhs == 0.1.0.0
    Hs-Source-Dirs:    lib/test
    Main-Is:           Main.hs

